syntax = "proto3";

package adv;

service AdvService {
    rpc  Update(RequestStat) returns (AdvData) {}
}

message RequestStat {
    int32 sum = 1;
    int32 count = 2;
    string server = 3;
}

message AdvData {
    int64 releaseTime =1 ;
    string status=2;
}